--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,8 +83,14 @@
         "stop_token": "cpp",
         "streambuf": "cpp",
         "thread": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "vec2": "cpp",
+        "vec3": "cpp",
+        "vec4": "cpp",
+        "vector3": "cpp",
+        "event": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled",
-    "cmake.configureOnOpen": true
+    "cmake.configureOnOpen": true,
+    "editor.wordWrap": "off"
 }
