--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "/home/wln/DD4hep/DDJunoDetectors/include/"
     ],
     "files.associations": {
+        "*.src": "cpp",
         "*.icc": "cpp",
         "*.imp": "cpp",
         "*.dec": "shellscript",
@@ -123,7 +124,31 @@
         "wcsv_ntuple": "cpp",
         "bufobj": "cpp",
         "aidas": "cpp",
-        "element": "cpp"
+        "element": "cpp",
+        "allocator": "cpp",
+        "__errc": "cpp",
+        "__mutex_base": "cpp",
+        "fsize": "cpp",
+        "dps": "cpp",
+        "img": "cpp",
+        "iros": "cpp",
+        "obj_list": "cpp",
+        "bmf": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "unordered_set": "cpp",
+        "vec2f": "cpp",
+        "vec3f": "cpp",
+        "vec4f": "cpp",
+        "plane": "cpp",
+        "_tess": "cpp",
+        "normal": "cpp",
+        "render_action": "cpp",
+        "io": "cpp",
+        "priorityq": "cpp",
+        "node": "cpp",
+        "ifile": "cpp",
+        "value": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "cmake.configureOnOpen": true,
